# colour

./: pyproject.toml  util.py
data/: SW ColorSnap + Emerald.csv  sw.py  sw_colors.csv
